ui fixed column headings, tightened up some spacing

--- a/src/app/tiering/components/client-tier-details/client-tier-details.component.css
+++ b/src/app/tiering/components/client-tier-details/client-tier-details.component.css
@@ -16,6 +16,7 @@
     text-transform: uppercase;
     font-size: 14px;
     height:20px;
+    text-align: center;
 }
 
 .score-box-yellow {
